[Fix] overflow:hidden  を削除

--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,8 @@
 
 html,
 body {
-
     width: 100%;
     height: 100vh;
-    overflow-x: hidden;
 }
 
 .text-vertical-center {
